# hahaMirror

./: .clang-format  .gitignore  .manifest  CMakeLists.txt  README.md  consumer_base.h  consumer_exception.cc  consumer_exception.h  consumer_identify.cc  consumer_identify.h  consumer_mjpeg.h  facedetect.cpp  facedetect.h  faceidentify.cpp  faceidentify.h  hahaMirror.pro  hahacore.cpp  hahacore.h  image.cpp  image.h  imageoverlay.cpp  imageoverlay.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playcamera.cpp  playcamera.h  producer_base.h  producer_record_impl.cc  producer_record_impl.cc.autosave  websocket_server.cc  websocket_server.h  哈哈镜注意事项.md
algorithm/: algorithm.pri
algorithm/include/faceHaha/: face_haha_api.h
algorithm/include/faceRec/: face_recognition_api.h
algorithm/model/fp32/: face_sh0_5_ok.xml  pfld-all-w3-sim.xml  zwnet.xml
common/: CMakeLists.txt  checkcode.cc  checkcode.h  common.pri  fileopt.cc  fileopt.h  logging.cc  logging.h  png.cc  processinfo.cc  processinfo.h  putpng.cc  puttext.cc  puttext.h  run_cmd.cc  run_cmd.h  string.cc  string.h  time.cc  time.h
lib/opencv/: libopencv_calib3d.so.4.3  libopencv_calib3d.so.4.5.2  libopencv_features2d.so.4.3.0  libopencv_features2d.so.4.5.2  libopencv_flann.so.4.3.0  libopencv_flann.so.4.5.2  libopencv_gapi.so.4.3  libopencv_highgui.so.4.3.0  libopencv_highgui.so.4.5.2  libopencv_imgcodecs.so.4.3  libopencv_imgcodecs.so.4.5.2  libopencv_ml.so.4.3  libopencv_ml.so.4.5.2  libopencv_objdetect.so.4.3.0  libopencv_objdetect.so.4.5.2  libopencv_photo.so.4.3  libopencv_photo.so.4.5.2  libopencv_stitching.so.4.3  libopencv_stitching.so.4.5.2  libopencv_video.so.4.3.0  libopencv_video.so.4.5.2  libopencv_videoio.so.4.3  libopencv_videoio.so.4.5.2
main_haha/: CMakeLists.txt  README.md
main_haha/include/common/: ai_common.h
main_haha/include/faceHaha/: face_haha_api.h
main_haha/include/faceRec/: face_recognition_api.h
main_haha/model/fp32/: pfld-77-sim.xml
main_haha/src/: main.cpp
scripts/control/: service_cli.sh
scripts/docker/: autostart.sh  service_cli.sh
src/: CMakeLists.txt  briefhttpclient.cpp  briefhttpclient.h  config.cpp  config.h  consumer_base.h  consumer_exception.cc  consumer_mjpeg.cc  facedetect.cpp  facedetect.h  faceidentify.cpp  faceidentify.h  hahacore.cpp  hahacore.h  hahaui.cpp  hahaui.h  http_client.cc  http_client.h  image.cpp  image.h  imageoverlay.cpp  imageoverlay.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playcamera.cpp  playcamera.h  producer_record_impl.cc  producer_record_impl.h  resolution.cpp  resolution.h  robotui.cpp  robotui.h  websocket_server.cc  websocket_server.h
